@@ -4,6 +4,7 @@ org.freedesktop.dbus.Message = ERR
 org.freedesktop.dbus.MethodCall = ERR
 org.freedesktop.dbus.MethodTuple = ERR
 org.freedesktop.dbus.AbstractConnection = VERBOSE
+org.freedesktop.dbus.AbstractConnection$FallbackContainer = VERBOSE
 org.freedesktop.dbus.AbstractConnection$_thread = ERR
 org.freedesktop.dbus.AbstractConnection$_sender = ERR
 org.freedesktop.dbus.DirectConnection = ERR
