@@ -7,6 +7,8 @@ Version 2.4:
 	  (pointed out by Serkan Kaba <serkan_kaba -at- yahoo -dot- com>)
 	* Automatically unexport objects which go out of scope in the 
 	  parent program (don't hold a strong reference).
+	* Add fallback objects---a single object can be called for any
+	  object under a given path prefix.
 
 
 Version 2.3.2:
